--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "redux": "^5.0.1"
   },
